[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
dotenvy = "0.15.7"
postgrest = "1.6.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

